--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mvg-infoscreen",
+  "description": "A simple infoscreen for the Munich public transport system (MVG).",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "module": "es2022",
   "scripts": {
     "dev": "next dev",
@@ -19,7 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.308.0",
+    "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
