--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+package-lock.json
 
 # testing
 /coverage
@@ -36,3 +37,4 @@ yarn-error.log*
 next-env.d.ts
 
 .cache
+.idea
