fix(CI): Fix GitHub Actions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,27 @@
 {
-  "name": "Node.js & TypeScript",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
-  "features": {
-    "ghcr.io/michidk/devcontainers-features/bun:1": {},
-    "ghcr.io/michidk/devcontainers-features/typos:1": {}
-  },
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "loiane.ts-extension-pack",
-        "oven.bun-vscode",
-        "kricsleo.vscode-package-json-inspector",
-        "biomejs.biome",
-        "tekumara.typos-vscode"
-      ],
-      "settings": {
-        "terminal.integrated.defaultProfile": "zsh",
-        "search.exclude": {
-          "**/node_modules": true,
-          "**/.next": true
-        }
-      }
-    }
-  }
+	"name": "Node.js & TypeScript",
+	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+	"features": {
+		"ghcr.io/michidk/devcontainers-features/bun:1": {},
+		"ghcr.io/michidk/devcontainers-features/typos:1": {}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"loiane.ts-extension-pack",
+				"oven.bun-vscode",
+				"kricsleo.vscode-package-json-inspector",
+				"biomejs.biome",
+				"tekumara.typos-vscode",
+				"github.vscode-github-actions"
+			],
+			"settings": {
+				"terminal.integrated.defaultProfile": "zsh",
+				"search.exclude": {
+					"**/node_modules": true,
+					"**/.next": true
+				}
+			}
+		}
+	}
 }
