--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -3,7 +3,7 @@ name: Reviewdog
 on:
   push:
     branches:
-      - "test"
+      - "main"
   pull_request:
     types:
       - "opened"
@@ -15,7 +15,7 @@ defaults:
 
 jobs:
   biome:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
     steps:
@@ -42,13 +42,16 @@ jobs:
         env:
           NPM_STABL_AUTH_TOKEN: ${{ secrets.STABL_ADMIN_PAT || github.token }}
 
-     - uses: mongolyy/reviewdog-action-biome@v1
+      - uses: mongolyy/reviewdog-action-biome@v1
         with:
           reporter: ${{ github.event_name == 'pull_request' && 'github-pr-review' || 'github-check' }}
+          fail_on_error: true
+          biome_flags: './src *.js *.ts *.json'
 
-    typos:
+
+  typos:
     name: typos (Spellchecker)
-    runs-on: ubicloud-standard-2-ubuntu-2204
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
