--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "bunx @biomejs/biome lint ./src",
-		"fmt": "bunx @biomejs/biome format --write ./src *.ts *.json",
-		"lintfix": "bunx @biomejs/biome check --apply ./src *.ts *.json",
-		"unsafe": "bunx @biomejs/biome check --apply-unsafe ./src *.ts *.json"
+		"fmt": "bunx @biomejs/biome format --write ./src *.js *.ts *.json",
+		"fix": "bunx @biomejs/biome check --apply ./src *.js *.ts *.json",
+		"unsafe": "bunx @biomejs/biome check --apply-unsafe ./src *js *.ts *.json"
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -21,7 +21,7 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
-		"cmdk": "^1.0.0",
+		"cmdk": "^0.2.1",
 		"lucide-react": "^0.363.0",
 		"next": "14.1.4",
 		"next-themes": "^0.3.0",
