--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -42,7 +42,7 @@ jobs:
 
       - uses: mongolyy/reviewdog-action-biome@v1
         with:
-          reporter: ${{ github.event_name == 'pull_request' && 'github-pr-review' || 'github-check' }}
+          reporter: 'github-check'
           fail_on_error: true
           biome_flags: './src *.js *.ts *.json'
 
@@ -57,5 +57,5 @@ jobs:
       - name: Run typos
         uses: Shemnei/reviewdog-action-typos@v0
         with:
-          reporter: ${{ github.event_name == 'pull_request' && 'github-pr-review' || 'github-check' }}
+          reporter: 'github-check'
           fail_on_error: true
