--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,8 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    ":enableVulnerabilityAlertsWithLabel('security')"
-  ],
-  "labels": [
-    "no-stale",
-    "bot"
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": [
+		"config:recommended",
+		":enableVulnerabilityAlertsWithLabel('security')"
+	],
+	"labels": ["no-stale", "bot"]
 }
