--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-	"name": "mvg-infoscreen",
-	"description": "A simple infoscreen for the Munich public transport system (MVG).",
-	"version": "0.1.0",
-	"license": "MIT",
-	"module": "es2022",
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "bunx @biomejs/biome lint ./src",
-		"fmt": "bunx @biomejs/biome format --write ./src *.js *.ts *.json",
-		"fix": "bunx @biomejs/biome check --apply ./src *.js *.ts *.json",
-		"unsafe": "bunx @biomejs/biome check --apply-unsafe ./src *js *.ts *.json"
-	},
-	"dependencies": {
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-popover": "^1.0.7",
-		"@radix-ui/react-scroll-area": "^1.0.5",
-		"@radix-ui/react-slot": "^1.0.2",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"cmdk": "^0.2.1",
-		"lucide-react": "^0.453.0",
-		"next": "14.2.4",
-		"next-themes": "^0.3.0",
-		"react": "^18",
-		"react-dom": "^18",
-		"tailwind-merge": "^2.2.0",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.5.3",
-		"@types/node": "^22.0.0",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"autoprefixer": "^10.0.1",
-		"dotenv": "^16.3.1",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
-	}
+  "name": "mvg-infoscreen",
+  "description": "A simple infoscreen for the Munich public transport system (MVG).",
+  "version": "0.1.0",
+  "license": "MIT",
+  "module": "es2022",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "bunx @biomejs/biome lint ./src",
+    "fmt": "bunx @biomejs/biome format --write ./src *.js *.ts *.json",
+    "fix": "bunx @biomejs/biome check --apply ./src *.js *.ts *.json",
+    "unsafe": "bunx @biomejs/biome check --apply-unsafe ./src *js *.ts *.json"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "lucide-react": "^0.453.0",
+    "next": "15.0.0",
+    "next-themes": "^0.3.0",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
+    "@types/node": "^22.0.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "^10.0.1",
+    "dotenv": "^16.3.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+  }
 }
